Added an option to enforce balances not going below zero